--- a/Content/gauss-elim-pivoting.ipynb
+++ b/Content/gauss-elim-pivoting.ipynb
@@ -52,9 +52,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "A = np.array([[2.,1.,-1.],\n",
-    "              [-3.,-1.,2.],\n",
-    "              [-2.,1.,2.]])"
+    "A = np.array([[ 2., 1.,-1.],\n",
+    "              [-3.,-1., 2.],\n",
+    "              [-2., 1., 2.]])"
    ]
   },
   {
@@ -159,6 +159,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 2.  1. -1.]\n",
+      " [-3. -1.  2.]\n",
+      " [-2.  1.  2.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
@@ -178,7 +197,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  8. -11.  -3.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +284,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 2.  1. -1.]\n",
+      " [-3. -1.  2.]\n",
+      " [-2.  1.  2.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -651,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -660,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -678,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -687,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -706,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -725,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -744,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -816,7 +871,7 @@
    "source": [
     "<a id='eq5'></a>\n",
     "$$\n",
-    "\\mathbf{t}^{(k)}[k:] = \\frac{\\tilde{\\mathbf{C}}^{(k-1)}[k: \\, , \\, k-1]}{\\tilde{\\mathbf{C}}[k-1, k-1]} \\quad , \\tag{5}\n",
+    "\\mathbf{t}^{(k)}[k:] = \\frac{\\tilde{\\mathbf{C}}^{(k-1)}[k: \\, , \\, k-1]}{\\tilde{\\mathbf{C}}^{(k-1)}[k-1, k-1]} \\quad , \\tag{5}\n",
     "$$"
    ]
   },
@@ -829,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -849,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -876,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -896,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -985,19 +1040,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    def Gauss_elim(A, y):\n",
-    "        assert A.ndim == 2, 'A must be a matrix'\n",
-    "        assert y.ndim == 1, 'y must be a vector'\n",
+    "    def Gauss_elim(A, y, check_input=True):\n",
     "        N = A.shape[0]\n",
-    "        assert A.shape[1] == N, 'A must be square'\n",
-    "        assert y.size == N, 'A columns must be equal to y size'\n",
+    "        if check_input is True:\n",
+    "            assert A.ndim == 2, 'A must be a matrix'\n",
+    "            assert y.ndim == 1, 'y must be a vector'\n",
+    "            assert A.shape[1] == N, 'A must be square'\n",
+    "            assert y.size == N, 'A columns must be equal to y size'\n",
     "\n",
     "        # create matrix C by stacking A and y\n",
     "        C = \n",
     "\n",
     "        for k = 1:N-1\n",
     "\n",
-    "            # permutation step (computation of C tilde)\n",
+    "            # permutation step (computation of C tilde - eq. 3)\n",
     "            p, C = permut(C, k-1)\n",
     "\n",
     "            # assert the pivot is nonzero\n",
@@ -1023,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1037,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1046,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1055,18 +1111,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[8.29 4.49 1.36 0.07 2.48 3.76]\n",
-      " [2.5  6.07 0.49 7.91 5.54 0.51]\n",
-      " [9.19 0.45 8.5  6.13 6.36 9.97]\n",
-      " [6.21 7.99 7.52 6.85 7.99 0.41]\n",
-      " [0.17 3.8  8.95 0.41 3.96 1.75]]\n"
+      "[[3.03 3.77 9.22 2.31 3.77 9.77]\n",
+      " [0.73 5.71 9.77 3.65 1.12 3.07]\n",
+      " [0.99 6.01 2.68 1.4  7.25 1.17]\n",
+      " [3.97 4.2  1.25 5.65 7.13 4.42]\n",
+      " [2.46 5.77 5.13 5.14 0.87 5.15]]\n"
      ]
     }
    ],
@@ -1076,27 +1132,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
-    "p, E = permut(C, 0)"
+    "p, E = permut(C, 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[9.19 0.45 8.5  6.13 6.36 9.97]\n",
-      " [2.5  6.07 0.49 7.91 5.54 0.51]\n",
-      " [8.29 4.49 1.36 0.07 2.48 3.76]\n",
-      " [6.21 7.99 7.52 6.85 7.99 0.41]\n",
-      " [0.17 3.8  8.95 0.41 3.96 1.75]]\n"
+      "[[3.03 3.77 9.22 2.31 3.77 9.77]\n",
+      " [0.99 6.01 2.68 1.4  7.25 1.17]\n",
+      " [0.73 5.71 9.77 3.65 1.12 3.07]\n",
+      " [3.97 4.2  1.25 5.65 7.13 4.42]\n",
+      " [2.46 5.77 5.13 5.14 0.87 5.15]]\n"
      ]
     }
    ],
@@ -1106,14 +1162,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2, 1, 0, 3, 4]\n"
+      "[0, 2, 1, 3, 4]\n"
      ]
     }
    ],
@@ -1123,18 +1179,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[9.19 0.45 8.5  6.13 6.36 9.97]\n",
-      " [2.5  6.07 0.49 7.91 5.54 0.51]\n",
-      " [8.29 4.49 1.36 0.07 2.48 3.76]\n",
-      " [6.21 7.99 7.52 6.85 7.99 0.41]\n",
-      " [0.17 3.8  8.95 0.41 3.96 1.75]]\n"
+      "[[3.03 3.77 9.22 2.31 3.77 9.77]\n",
+      " [0.99 6.01 2.68 1.4  7.25 1.17]\n",
+      " [0.73 5.71 9.77 3.65 1.12 3.07]\n",
+      " [3.97 4.2  1.25 5.65 7.13 4.42]\n",
+      " [2.46 5.77 5.13 5.14 0.87 5.15]]\n"
      ]
     }
    ],
@@ -1318,13 +1374,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    def Gauss_elim_expanded(A, Y):\n",
-    "        assert A.ndim == Y.ndim == 2, 'A and Y must be matrices'\n",
+    "    def Gauss_elim_expanded(A, Y, check_input=True):\n",
     "        N = A.shape[0]\n",
-    "        assert A.shape[1] == N, 'A must be square'\n",
-    "        assert Y.shape[0] == N, 'A columns must hav the same size as Y rows'\n",
+    "        if check_input is True:\n",
+    "            assert A.ndim == Y.ndim == 2, 'A and Y must be matrices'\n",
+    "            assert A.shape[1] == N, 'A must be square'\n",
+    "            assert Y.shape[0] == N, 'A columns must hav the same size as Y rows'\n",
     "\n",
-    "        # create matrix C by stacking A and the identity matrix\n",
+    "        # create matrix C by stacking A and the identity matrix (eq. 12)\n",
     "        C = \n",
     "\n",
     "        for k = 1:N-1\n",
@@ -1343,7 +1400,7 @@
     "            C[k:,k:] = \n",
     "\n",
     "        # return the inverse of A\n",
-    "        return C[:,N:]"
+    "        return np.triu(C[:,:N]), C[:,N:]"
    ]
   },
   {
@@ -1432,6 +1489,96 @@
     "\n",
     "2) Create two tests in your `test_my_functions.py` file. In the first test, create a matrix `A`, compute its inverse `Ainv` by using the function `mat_inverse` and verify if the products `A Ainv` and `Ainv A` are equal to the identity matrix. The second test must compare the inverse matrix computed by using `mat_inverse` and the inverse matrix computed by using the routine [`numpy.linalg.inv`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.linalg.inv.html). "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N = 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A = np.reshape(np.arange(N*N), (N,N))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  1  2  3  4]\n",
+      " [ 5  6  7  8  9]\n",
+      " [10 11 12 13 14]\n",
+      " [15 16 17 18 19]\n",
+      " [20 21 22 23 24]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3 4]\n",
+      "[5 6 7 8 9]\n",
+      "[10 11 12 13 14]\n",
+      "[15 16 17 18 19]\n",
+      "[20 21 22 23 24]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for ai in A:\n",
+    "    print(ai)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0  5 10 15 20]\n",
+      "[ 1  6 11 16 21]\n",
+      "[ 2  7 12 17 22]\n",
+      "[ 3  8 13 18 23]\n",
+      "[ 4  9 14 19 24]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for aj in A.T:\n",
+    "    print(aj)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
