--- a/Content/intro_linear_syst.ipynb
+++ b/Content/intro_linear_syst.ipynb
@@ -125,9 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np"
@@ -143,9 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "A = np.array([[1.,5.,-5.3],\n",
@@ -164,9 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "x = np.linalg.solve(A,y)"
@@ -174,19 +168,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 11.08129511   9.23845874   2.88180921]\n"
+      "[11.08129511  9.23845874  2.88180921]\n"
      ]
     }
    ],
    "source": [
-    "print x"
+    "print(x)"
    ]
   },
   {
@@ -198,10 +192,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "y_calc = np.dot(A, x)"
@@ -216,12 +208,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 42.  11.  67.]\n"
+      "[42. 11. 67.]\n"
      ]
     }
    ],
    "source": [
-    "print y_calc"
+    "print(y_calc)"
    ]
   },
   {
@@ -233,13 +225,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 42.  11.  67.]\n"
+      "[42. 11. 67.]\n"
      ]
     }
    ],
    "source": [
-    "print y"
+    "print(y)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
