fix small errors in gauss-elim notebook and review lu_decomp

--- a/Content/gauss-elim-outer.ipynb
+++ b/Content/gauss-elim-outer.ipynb
@@ -11,6 +11,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### References\n",
+    "\n",
+    "* Golub, G. H. and C. F. Van Loan, (2013), Matrix computations, 4th edition, Johns Hopkins University Press, ISBN 978-1-4214-0794-4."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "This notebook shows how the [Gaussian elimination](https://en.wikipedia.org/wiki/Gaussian_elimination) iteratively transforms an unstructured linear system `Ax = y` into an equivalent triangular system `Bx = z` having the same solution `x`."
    ]
   },
@@ -510,7 +519,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$t_{i}^{(k)} = \\begin{cases} 0 & \\quad \\text{if } i < k \\\\\\\\ \\dfrac{a^{(k-1)}_{ik}}{a^{(k-1)}_{kk}} & \\quad \\text{if } i \\ge k\\\\ \\end{cases} \\: ,$"
+    "$$\n",
+    "t_{i}^{(k)} = \\begin{cases} 0 & \\quad \\text{if } i < k \\\\\\\\ \\dfrac{a^{(k-1)}_{i(k-1)}}{a^{(k-1)}_{(k-1)(k-1)}} & \\quad \\text{if } i \\ge k\\\\ \\end{cases} \\: ,\n",
+    "$$"
    ]
   },
   {
@@ -528,7 +539,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This proccess of transforming the original system into an equivalent triangular system requires that all the elements $a_{kk}^{(k-1)}$ be nonzero. They are called **pivots**."
+    "This proccess of transforming the original system into an equivalent triangular system requires that all the elements $a_{(k-1)(k-1)}^{(k-1)}$ be nonzero. They are called **pivots**."
    ]
   },
   {
