--- a/Content/gauss-elim-pivoting.ipynb
+++ b/Content/gauss-elim-pivoting.ipynb
@@ -11,6 +11,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### References\n",
+    "\n",
+    "* Golub, G. H. and C. F. Van Loan, (2013), Matrix computations, 4th edition, Johns Hopkins University Press, ISBN 978-1-4214-0794-4."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The [Gaussian elimination](https://en.wikipedia.org/wiki/Gaussian_elimination) iteratively transforms an unstructured linear system $\\mathbf{A}\\mathbf{x} = \\mathbf{y}$ into an equivalent triangular system $\\mathbf{B}\\mathbf{x} = \\mathbf{z}$ having the same solution $\\mathbf{x}$. As pointed out in the previous class, the **pivots** needed for computing the **Gauss multipliers** must be nonzero. The presence of small pivots produces arbitrarily poor results, even for well-conditioned problems, showing that Gauss elimination may be an unstable method, depending on the elements of $\\mathbf{A}$ (Golub and Van Loan, 2013)."
    ]
   },
@@ -1063,7 +1072,7 @@
     "            # in the lower part of C (equations 5 and 7)\n",
     "            C[k:,k-1] = \n",
     "\n",
-    "            # zeroing of the elements in the ith column (equation 8)\n",
+    "            # zeroing of the elements in the (k-1)th column (equation 8)\n",
     "            C[k:,k:] = \n",
     "\n",
     "        # return the equivalent triangular system\n",
@@ -1079,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
