review LDLT decomposition

--- a/Content/lu_decomp_pivoting.ipynb
+++ b/Content/lu_decomp_pivoting.ipynb
@@ -11,6 +11,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### References\n",
+    "\n",
+    "* Turing, A.M. (1948). \"Rounding-Off Errors in Matrix Processes\". The Quarterly Journal of Mechanics and Applied Mathematics. 1: 287–308. doi: [10.1093/qjmam/1.1.287](https://doi.org/10.1093/qjmam/1.1.287)\n",
+    "\n",
+    "* A. Schwarzenberg-Czerny (1995). \"On matrix factorization and efficient least squares solution\". Astronomy and Astrophysics Supplement. 110: 405-410. Bibliographic Code ADS: [1995A&AS..110..405S](http://adsabs.harvard.edu/abs/1995A%26AS..110..405S)\n",
+    "\n",
+    "* Golub, G. H. and C. F. Van Loan, (2013), Matrix computations, 4th edition, Johns Hopkins University Press, ISBN 978-1-4214-0794-4."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The previous notebook (`lu_decomp_intro`) presents an algorithm for computing the [LU decomposition](https://en.wikipedia.org/wiki/LU_decomposition). The algotithm, however, does not apply any pivoting scheme for preventing spurious errors due to numerical instabilities. The algorithm presented here, on the other hand, shows how the partial pivoting changes our previous algorithm for computing the LU decomposition."
    ]
   },
@@ -559,59 +572,6 @@
    "metadata": {},
    "source": [
     "This algorithm receives a square matrix $\\mathbf{A}$ and returns the permutation matrix $\\mathbf{P}$ and a matrix $\\mathbf{C}$ containing the triangular matrices $\\tilde{\\mathbf{L}}$ and $\\mathbf{U}$. The elements of $\\tilde{\\mathbf{L}}$, except the unitary elements of its main diagonal, are stored below the main diagonal of $\\mathbf{C}$. The elements of $\\mathbf{U}$ are stored in the upper part of $\\mathbf{C}$, including its main diagonal."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def lu_decomp(A, check_input=True):\n",
-    "    N = A.shape[0]\n",
-    "    if check_input is True:\n",
-    "        assert A.ndim == 2, 'A must be a matrix'\n",
-    "        assert A.shape[1] == N, 'A must be square'\n",
-    "\n",
-    "    # create matrix C as a copy of A\n",
-    "    C = np.copy(A)\n",
-    "    \n",
-    "    # create a list of indices representing\n",
-    "    # the permutation matrix P\n",
-    "    P = np.arange(N)\n",
-    "\n",
-    "    for k in range(1,N):\n",
-    "    \n",
-    "        # permutation step\n",
-    "        p, C = permut(C, k-1)\n",
-    "        P = P[p]\n",
-    "\n",
-    "        # assert the pivot is nonzero\n",
-    "        assert C[k-1,k-1] != 0., 'null pivot!'\n",
-    "\n",
-    "        # calculate the Gauss multipliers and store them \n",
-    "        # in the lower part of C\n",
-    "        C[k:,k-1] = C[k:,k-1]/C[k-1,k-1]\n",
-    "\n",
-    "        # zeroing of the elements in the (k-1)th column\n",
-    "        C[k:,k:] = C[k:,k:] - np.outer(C[k:,k-1], C[k-1,k:])\n",
-    "\n",
-    "    # return matrix C\n",
-    "    return P, C"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def permut (C, i):\n",
-    "    p = [j for j in range(C.shape[0])]\n",
-    "    imax = i + np.argmax(np.abs(C[i:,i]))\n",
-    "    if imax != i:\n",
-    "        p[i], p[imax] = p[imax], p[i]\n",
-    "    return p, C[p,:]"
    ]
   },
   {
