--- a/Content/ldlt_decomp.ipynb
+++ b/Content/ldlt_decomp.ipynb
@@ -387,7 +387,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### Testing the function `ldlt_decomp_overwrite`"
@@ -429,7 +429,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "# compare the upper triagle of matrices matrix A3 and A\n",
+    "# compare the upper triangle of matrices matrix A3 and A\n",
     "# they must be equal to each other\n",
     "np.allclose(np.triu(A), np.triu(A3))"
    ]
