review Least_squares, grav_net and review_math_1

--- a/Content/grav_net.ipynb
+++ b/Content/grav_net.ipynb
@@ -185,7 +185,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "According to the [previous class](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/least_squares.ipynb), we may compute the covariance matrix $\\mathbf{\\Sigma}_{\\mathbf{g}}$ of the parameter vector as follows:\n",
+    "According to the notebook `least_squares`, we may compute the covariance matrix $\\mathbf{\\Sigma}_{\\mathbf{g}}$ of the parameter vector as follows:\n",
     "\n",
     "$$\n",
     "\\mathbf{\\Sigma}_{\\mathbf{g}} = \\left( \\mathbf{A}^{\\top}\\mathbf{W}\\mathbf{A} \\right)^{-1} \\mathbf{A}^{\\top}\\mathbf{W}\n",
@@ -438,7 +438,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
