--- a/Content/review_math_1.ipynb
+++ b/Content/review_math_1.ipynb
@@ -37,10 +37,10 @@
     "\n",
     "$$\n",
     "\\mathbf{p} = \\begin{bmatrix}\n",
+    "p_{0} \\\\\n",
     "p_{1} \\\\\n",
-    "p_{2} \\\\\n",
     "\\vdots \\\\\n",
-    "p_{M}\n",
+    "p_{M-1}\n",
     "\\end{bmatrix} \\: , \\tag{1}\n",
     "$$"
    ]
@@ -49,7 +49,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "where $p_{j}$, $j = 1, \\dots, M$, are constants called **parameters**."
+    "where $p_{j}$, $j = 0, \\dots, M-1$, are constants called **parameters**."
    ]
   },
   {
@@ -73,7 +73,7 @@
    "source": [
     "<a id='eq2'></a>\n",
     "$$\n",
-    "f(\\mathbf{p}) = p_{1} + p_{2} \\, x + p_{3} \\, x^{2} \\: , \\tag{2}\n",
+    "f(\\mathbf{p}) = p_{0} + p_{1} \\, x + p_{2} \\, x^{2} \\: , \\tag{2}\n",
     "$$"
    ]
   },
@@ -83,7 +83,7 @@
    "source": [
     "<a id='eq3'></a>\n",
     "$$\n",
-    "f(\\mathbf{p}) = \\sin(p_{1} \\, t) + \\cos(3 \\, p_{2}) \\, \\exp^{\\, p_{3} \\, t} \\: , \\tag{3}\n",
+    "f(\\mathbf{p}) = \\sin(p_{0} \\, t) + \\cos(3 \\, p_{1}) \\, \\exp^{\\, p_{2} \\, t} \\: , \\tag{3}\n",
     "$$"
    ]
   },
@@ -93,7 +93,7 @@
    "source": [
     "<a id='eq4'></a>\n",
     "$$\n",
-    "f(\\mathbf{p}) = \\frac{p_{1}}{\\left[ ( p_{2} \\, x )^{2} + (p_{3} \\, y)^{2} + (p_{4} \\, z)^{2} \\right]^{\\frac{1}{2}}} \\: . \\tag{4}\n",
+    "f(\\mathbf{p}) = \\frac{p_{0}}{\\left[ ( p_{1} \\, x )^{2} + (p_{2} \\, y)^{2} + (p_{3} \\, z)^{2} \\right]^{\\frac{1}{2}}} \\: . \\tag{4}\n",
     "$$"
    ]
   },
@@ -101,7 +101,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In these examples, there are functions depending on spatial coordinates $x$, $y$, $z$, and time $t$. In general, we omit the dependence of $f$ on these variables and write just $f(\\mathbf{p})$. If we need to specify that $f$ is evaluated at a particular spatial coordinate $(x_{i}, y_{i}, z_{i})$ or time $t_{i}$, we use the subscript a subcript notation. Let's consider, for example, the two first functions presented above (equations [2](#eq2) and [3](#eq3)). By using the subscript notation, they are represented as follows:"
+    "In these examples, there are functions depending on spatial coordinates $x$, $y$, $z$, and time $t$. In general, we omit the dependence of $f$ on these variables and write just $f(\\mathbf{p})$. If we need to specify that $f$ is evaluated at a particular spatial coordinate $(x_{i}, y_{i}, z_{i})$ or time $t_{i}$, we use the subscript notation. Let's consider, for example, the two first functions presented above (equations [2](#eq2) and [3](#eq3)). By using the subscript notation, they are represented as follows:"
    ]
   },
   {
@@ -110,7 +110,7 @@
    "source": [
     "<a id='eq5'></a>\n",
     "$$\n",
-    "f_{i}(\\mathbf{p}) = p_{1} + p_{2} \\, x_{i} + p_{3} \\, x_{i}^{2} \\: , \\tag{5}\n",
+    "f_{i}(\\mathbf{p}) = p_{0} + p_{1} \\, x_{i} + p_{2} \\, x_{i}^{2} \\: , \\tag{5}\n",
     "$$"
    ]
   },
@@ -120,7 +120,7 @@
    "source": [
     "<a id='eq6'></a>\n",
     "$$\n",
-    "f_{i}(\\mathbf{p}) = \\sin(p_{1} \\, t_{i}) + \\cos(3 \\, p_{2}) \\, \\exp^{\\, p_{3} \\, t_{i}} \\: . \\tag{6}\n",
+    "f_{i}(\\mathbf{p}) = \\sin(p_{0} \\, t_{i}) + \\cos(3 \\, p_{1}) \\, \\exp^{\\, p_{2} \\, t_{i}} \\: . \\tag{6}\n",
     "$$"
    ]
   },
@@ -155,10 +155,10 @@
     "<a id='eq7'></a>\n",
     "$$\n",
     "\\mathbf{f}(\\mathbf{p}) = \\begin{bmatrix}\n",
-    "p_{1} + p_{2} \\, x_{1} + p_{3} \\, x_{1}^{2} \\\\\\\\\n",
-    "p_{1} + p_{2} \\, x_{2} + p_{3} \\, x_{2}^{2} \\\\\\\\\n",
+    "p_{0} + p_{1} \\, x_{0} + p_{2} \\, x_{0}^{2} \\\\\\\\\n",
+    "p_{0} + p_{1} \\, x_{1} + p_{2} \\, x_{1}^{2} \\\\\\\\\n",
     "\\vdots \\\\\\\\\n",
-    "p_{1} + p_{2} \\, x_{N} + p_{3} \\, x_{N}^{2}\n",
+    "p_{0} + p_{1} \\, x_{N-1} + p_{2} \\, x_{N-1}^{2}\n",
     "\\end{bmatrix} \\tag{7}\n",
     "$$"
    ]
@@ -170,10 +170,10 @@
     "<a id='eq8'></a>\n",
     "$$\n",
     "\\mathbf{f}(\\mathbf{p}) = \\begin{bmatrix}\n",
-    "\\sin(p_{1} \\, t_{1}) + \\cos(3 \\, p_{2}) \\, \\exp^{\\, p_{3} \\, t_{1}} \\\\\\\\\n",
-    "\\sin(p_{1} \\, t_{2}) + \\cos(3 \\, p_{2}) \\, \\exp^{\\, p_{3} \\, t_{2}} \\\\\\\\\n",
+    "\\sin(p_{0} \\, t_{0}) + \\cos(3 \\, p_{1}) \\, \\exp^{\\, p_{2} \\, t_{0}} \\\\\\\\\n",
+    "\\sin(p_{0} \\, t_{1}) + \\cos(3 \\, p_{1}) \\, \\exp^{\\, p_{2} \\, t_{1}} \\\\\\\\\n",
     "\\vdots \\\\\\\\\n",
-    "\\sin(p_{1} \\, t_{N}) + \\cos(3 \\, p_{2}) \\, \\exp^{\\, p_{3} \\, t_{N}}\n",
+    "\\sin(p_{0} \\, t_{N-1}) + \\cos(3 \\, p_{1}) \\, \\exp^{\\, p_{2} \\, t_{N-1}}\n",
     "\\end{bmatrix} \\tag{8}\n",
     "$$"
    ]
@@ -185,10 +185,10 @@
     "<a id='eq9'></a>\n",
     "$$\n",
     "\\mathbf{f}(\\mathbf{p}) = \\begin{bmatrix}\n",
-    "\\frac{p_{1}}{\\left[ ( p_{2} \\, x_{1} )^{2} + (p_{3} \\, y_{1})^{2} + (p_{4} \\, z_{1})^{2} \\right]^{\\frac{1}{2}}} \\\\\\\\\n",
-    "\\frac{p_{1}}{\\left[ ( p_{2} \\, x_{2} )^{2} + (p_{3} \\, y_{2})^{2} + (p_{4} \\, z_{2})^{2} \\right]^{\\frac{1}{2}}} \\\\\\\\\n",
+    "\\frac{p_{0}}{\\left[ ( p_{1} \\, x_{0} )^{2} + (p_{2} \\, y_{0})^{2} + (p_{3} \\, z_{0})^{2} \\right]^{\\frac{1}{2}}} \\\\\\\\\n",
+    "\\frac{p_{0}}{\\left[ ( p_{1} \\, x_{1} )^{2} + (p_{2} \\, y_{1})^{2} + (p_{3} \\, z_{1})^{2} \\right]^{\\frac{1}{2}}} \\\\\\\\\n",
     "\\vdots \\\\\\\\\n",
-    "\\frac{p_{1}}{\\left[ ( p_{2} \\, x_{N} )^{2} + (p_{3} \\, y_{N})^{2} + (p_{4} \\, z_{N})^{2} \\right]^{\\frac{1}{2}}}\n",
+    "\\frac{p_{0}}{\\left[ ( p_{1} \\, x_{N-1} )^{2} + (p_{2} \\, y_{N-1})^{2} + (p_{3} \\, z_{N-1})^{2} \\right]^{\\frac{1}{2}}}\n",
     "\\end{bmatrix} \\: . \\tag{9}\n",
     "$$"
    ]
@@ -207,10 +207,10 @@
     "<a id='eq10'></a>\n",
     "$$\n",
     "\\mathbf{f}(\\mathbf{p}) = \\begin{bmatrix}\n",
+    "f_{0}(\\mathbf{p}) \\\\\n",
     "f_{1}(\\mathbf{p}) \\\\\n",
-    "f_{2}(\\mathbf{p}) \\\\\n",
     "\\vdots \\\\\n",
-    "f_{N}(\\mathbf{p})\n",
+    "f_{N-1}(\\mathbf{p})\n",
     "\\end{bmatrix} \\: , \\tag{10}\n",
     "$$"
    ]
@@ -228,7 +228,7 @@
    "source": [
     "<a id='eq11'></a>\n",
     "$$\n",
-    "f_{i}(\\mathbf{p}) = p_{1} + p_{2} \\, x_{i} + p_{3} \\, x_{i}^{2} \\: , \\quad i = 1, \\dots, N \\: . \\tag{11}\n",
+    "f_{i}(\\mathbf{p}) = p_{0} + p_{1} \\, x_{i} + p_{2} \\, x_{i}^{2} \\: , \\quad i = 0, \\dots, N-1 \\: . \\tag{11}\n",
     "$$"
    ]
   },
@@ -244,7 +244,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Frequently, we need to compute the first order partial derivative of a [Scalar function](#Scalar_functions) $f(\\mathbf{p})$ with respect to a given [parameter](#Parameter_vector) $p_{j}$, $j = 1, \\dots, M$. We represent this derivative as follows:"
+    "Frequently, we need to compute the first order partial derivative of a [Scalar function](#Scalar_functions) $f(\\mathbf{p})$ with respect to a given [parameter](#Parameter_vector) $p_{j}$, $j = 0, \\dots, M-1$. We represent this derivative as follows:"
    ]
   },
   {
@@ -322,7 +322,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Along the course, we will work with scalar functions $f(\\mathbf{p})$ whose derivatives can be computed in any order. For example, let's consider the derivative represented in equation [13b](#eq13b). We consider that $f(\\mathbf{p})$ satisfies the required conditions so that\n",
+    "Along the course, we will work with \"nice\" scalar functions $f(\\mathbf{p})$, whose [derivatives can be computed in any order](https://mathworld.wolfram.com/PartialDerivative.html). For example, let's consider the derivative represented in equation [13b](#eq13b). We consider that $f(\\mathbf{p})$ satisfies the required conditions so that\n",
     "\n",
     "$$\n",
     "\\frac{\\partial^{3} f(\\mathbf{p})}{\\partial p_{2} \\partial p_{5} \\partial p_{6}} =\n",
@@ -579,7 +579,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
