LU, LDLT and Cholesky decompositions

--- a/Content/ldlt_decomp.ipynb
+++ b/Content/ldlt_decomp.ipynb
@@ -321,9 +321,9 @@
     "        \n",
     "            v = A[j,:j-1]*d[:j-1]\n",
     "            \n",
-    "            d[j] = A[j,j] - np.dot(A[j,:j-1], v)\n",
+    "            d[j] = A[j,j] - dot(A[j,:j-1], v)\n",
     "            \n",
-    "            A[j+1:,j] = (A[j+1:,j] - np.dot(A[j+1:,:j-1],v))/d[j]\n",
+    "            A[j+1:,j] = (A[j+1:,j] - dot(A[j+1:,:j-1],v))/d[j]\n",
     "\n",
     "        return d"
    ]
@@ -391,6 +391,23 @@
    "metadata": {},
    "source": [
     "#### Testing the function `ldlt_decomp_overwrite`"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "# Define N\n",
+    "N = 5"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "# create a symmetric matrix A\n",
+    "A = np.random.rand(N,N) + np.identity(N)\n",
+    "A = 0.5*(A + A.T)"
    ]
   },
   {
