--- a/Content/lu_decomp_pivoting.ipynb
+++ b/Content/lu_decomp_pivoting.ipynb
@@ -250,13 +250,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "is the inverse of matrix $\\tilde{\\mathbf{Q}}^{(k)}$ ([equation 7](#eq7)), "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "<a id='eq12'></a>\n",
     "$$\n",
     "\\mathbf{Q}^{(-k)} = \\left( \\mathbf{I} + \\mathbf{M}^{(k)} \\right) \\tag{12}\n",
@@ -528,11 +521,14 @@
     "\n",
     "        # create matrix C as a copy of A\n",
     "        C = \n",
+    "        \n",
+    "        P = list containing elements varying from 0 to N-1\n",
     "\n",
     "        for k = 1:N-1\n",
     "        \n",
     "            # permutation step\n",
     "            p, C = permut(C, k-1)\n",
+    "            P = P[p]\n",
     "\n",
     "            # assert the pivot is nonzero\n",
     "            assert C[k-1,k-1] != 0., 'null pivot!'\n",
@@ -545,7 +541,7 @@
     "            C[k:,k:] = \n",
     "\n",
     "        # return matrix C\n",
-    "        return C"
+    "        return P, C"
    ]
   },
   {
